# hsplot

./: .gitignore  LICENSE  hsplot.cabal  test.hs
Graphics/: HsPlot.hs
Graphics/HsPlot/: Algorithms.hs  Base.hs  Cairo.hs  Colors.hs  Colours.hs  Render.hs  Samples.hs  Scales.hs  TH.hs
data/: diamonds.csv  dsmall.csv
examples/: ggplot-book.hs
